# src/backend/GnuCashBudget.GnuCashData.Abstractions/Models/Account.cs
@@ -3,6 +3,9 @@ using System.Collections.Immutable;
 namespace GnuCashBudget.GnuCashData.Abstractions.Models;
 
 public record Account(
+    string Id,
     string Name,
+    string FullName,
     string Commodity,
-    AccountType AccountType);
+    AccountType AccountType,
+    ImmutableList<Account> ChildAccounts);
